# file_metadata_finder

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  WINDOWS_TESTING.md  build-musl.sh  build-windows.sh  test_integration.sh
example_excel_files/: ExampleBook1.xlsx  ExampleBook2.xlsx
src/: main.rs
