[package]
name = "file_metadata_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
calamine = "0.25"
chrono = "0.4"
regex = "1.10"
walkdir = "2.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
crc32fast = "1.4"
strsim = "0.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
